Add models, views, forms, and templates for managing subjects, institutions, and people

--- a/crisp_modals/templates/crisp_modals/modal.html
+++ b/crisp_modals/templates/crisp_modals/modal.html
@@ -2,20 +2,18 @@
 
 
 <!-- Modal -->
-    <style>
-    @keyframes spin{
-        0% {transform:rotate(0deg)}
-        100% {transform:rotate(359deg)}
-    }
-    .spin{  animation:spin 2s infinite linear }
-    </style>
 {% block modal_assets %}{% endblock %}
+<style>
+    legend.form-label {
+        font-size: inherit;
+    }
+</style>
 <div class="modal fade {% block modal_classes %}{% endblock %}" id="modal" tabindex="-1" role="dialog"
-     aria-labelledby="modal-title" aria-hidden="true">
-    <div class="modal-dialog {% block modal_styles %}{% endblock %}">
+     aria-labelledby="modal-title" inert>
+    <div class="modal-dialog modal-dialog-centered {% block modal_styles %}{% endblock %}">
         <div class="modal-content">
             {% block pre_content %}{% endblock %}
-            <div class="modal-header py-2 bg-primary-subtle">
+            <div class="modal-header bg-primary-subtle">
                 {% block modal_title_tools %}{% endblock %}
                 <div class="modal-title" id="modal-title">{% block modal_title %}{% endblock %}</div>
                 <div class="modal-subtitle text-muted">{% block modal_subtitle %}{% endblock %}</div>
