--- a/demo/example/templates/example/institution_list.html
+++ b/demo/example/templates/example/institution_list.html
@@ -1,40 +1,35 @@
 {% extends "base.html" %}
 
-{% block page-heading %}People{% endblock %}
+{% block page-heading %}Institutions{% endblock %}
 {% block bread-crumbs %}
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">People</li>
+            <li class="breadcrumb-item active" aria-current="page">Institutions</li>
         </ol>
     </nav>
 {% endblock %}
 {% block page-tools %}
-    <a href="#0" data-modal-url="{% url 'person-add' %}" class="d-flex flex-column align-items-center py-3">
+    <a href="#0" data-modal-url="{% url 'institution-add' %}" class="d-flex flex-column align-items-center py-3">
         <i class="bi-plus-circle"></i><br/>
-        <small class="text-muted">Add Person</small>
+        <small class="text-muted">Add Institution</small>
     </a>
 {% endblock %}
-
 {% block full %}
     <table class="table table-ruled">
         <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>Institution</th>
+            <th>Name</th>
+            <th>City</th>
             <th>Country</th>
         </tr>
         </thead>
         <tbody>
-        {% for person in object_list %}
+        {% for institute in object_list %}
             <tr>
-                <td><a href="#0" data-modal-url="{% url 'person-edit' pk=person.pk %}">{{ person.first_name }}</a></td>
-                <td>{{ person.last_name }}</td>
-                <td>{{ person.age }}</td>
-                <td>{{ person.institution.name }}</td>
-                <td>{{ person.institution.country }}</td>
+                <td><a href="#!" data-modal-url="{% url 'institution-edit' pk=institute.pk %}">{{ institute.name }}</a></td>
+                <td>{{ institute.city }}</td>
+                <td>{{ institute.country }}</td>
             </tr>
         {% endfor %}
         </tbody>
