--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -1,18 +1,27 @@
 {% extends "crisp_modals/form.html" %}
+{% load crisp_modals %}
 
-{% block modal_title %}Delete?{% endblock %}
+{% block modal_title %}<h4 class="my-0">Delete {{ object|verbose_name }}?</h4>{% endblock %}
 {% block pre_content %}
-    <form action="{% if form_action %}{{ form_action }}{% else %}delete/{% endif %}" method="post">
+    <form action="{% if form_action %}{{ form_action }}{% endif %}" method="post">
 {% endblock %}
 
 {% block modal_body %}
-    <h5>Are you sure you want to delete the following {{ object.__class__.__name__ }} <strong>"{{object}}"</strong>?</h5>
-    <p>{{ object.delete_warning }}</p>
+    <h5>Are you sure you want to delete the following {{ object|verbose_name }} <strong>"{{object}}"</strong>?</h5>
+    <hr/>
+    The following related items will be deleted:
+    <ul>
+        {% for item in related %}
+            <li>{{ item }}</li>
+        {% endfor %}
+    </ul>
     <input type="hidden" name="post" value="yes" />
 {% endblock %}
 {% block modal_footer %}
-    <button type="submit" value="Submit" class="btn btn-danger pull-right">Yes, I'm sure</button>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+    <button type="submit" value="Submit" class="btn btn-danger">Yes, I'm sure</button>
 {% endblock %}
 {% block post_content %}
+    {% csrf_token %}
     </form>
 {% endblock %}
