--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -10,41 +10,68 @@
     <link rel="icon" href="{% static 'img/icon.ico' %}">
 
     <!-- Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" crossorigin="anonymous"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<style>
+    :root {
+        --bs-border-radius: 0.25rem;
+        --bs-body-font-size: 0.95rem;
+        --bs-breadcrumb-font-size: 0.85rem;
+    }
+    a {
+        text-decoration: none;
+    }
+    .modal.fade:not(.show) .modal-dialog {
+      transform: scale(0.8);
+    }
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+    .page-header {
+        border-bottom: 1px solid var(--bs-border-color);
+        margin-bottom: 1rem;
+    }
+    .pagination .page-link{
+        font-size: 0.85rem;
+    }
+    .spin {
+        animation: spin 1s linear infinite;
+    }
+</style>
     {% block site_css %}{% endblock %}
     {% block extra_css %}{% endblock %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-            integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     {% block pre_js %}{% endblock %}
-
 </head>
-<body class="reporter{% block body_class %}{% endblock %}">
-    <div class="container-fluid bg-light p-3">
-{% block body %}
-    <div class="content bg-white p-3" >
-        {% block content-header %}
-            <div class="folio-header d-flex flex-row justify-content-between overflow-ellipsis">
-                <div class="heading">{% block page_heading %}{% endblock %}</div>
-                <div class="no-overflow toolbox">{% block object_tools %}{% endblock %}</div>
+<body class="{% block body_class %}{% endblock %} bg-light p-5">
+    <div class="container-fluid bg-white p-5">
+    {% block body %}
+        <div class="row">
+            <div class="col">
+                {% block bread-crumbs %}{% endblock %}
             </div>
-        {% endblock %}
-        {% block object_status %}{% endblock %}
-        {% block full %}
-        {% endblock %}
+        </div>
+        <div class="row">
+            <div class="col">
+            {% block content-header %}
+                <div class="page-header d-flex flex-row justify-content-between align-items-center overflow-ellipsis">
+                    <div class="heading"><h4>{% block page-heading %}&nbsp;{% endblock %}</h4></div>
+                    <div class="no-overflow toolbox">{% block page-tools %}{% endblock %}</div>
+                </div>
+            {% endblock %}
+            {% block object_status %}{% endblock %}
+            {% block full %}
+            {% endblock %}
+            </div>
+        </div>
+    {% endblock %}
     </div>
-{% endblock %}
-    </div>
-<div id="modal-target"></div>
+
+    <div id="modal-target"></div>
 {% block post_js %}{% endblock %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery.cookie@1.4.1/jquery.cookie.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 <script src="{% static 'crisp_modals/modals.min.js' %}"></script>
 {% block extra_js %}{% endblock %}
 <script>
