Rename crisp_modals to django_crisp_modals and update template paths

--- a/django_crisp_modals/templates/django_crisp_modals/delete.html
+++ b/django_crisp_modals/templates/django_crisp_modals/delete.html
@@ -1,4 +1,4 @@
-{% extends "crisp_modals/form.html" %}
+{% extends "django_crisp_modals/form.html" %}
 {% load crisp_modals %}
 
 {% block modal_title %}<h4 class="my-0">Delete {{ object|verbose_name }}?</h4>{% endblock %}
