--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -72,7 +72,7 @@
     <div id="modal-target"></div>
 {% block post_js %}{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-<script src="{% static 'crisp_modals/modals.min.js' %}"></script>
+<script src="{% static 'django_crisp_modals/modals.min.js' %}"></script>
 {% block extra_js %}{% endblock %}
 <script>
     $(document).ready(function () {
