--- a/django_crisp_modals/templates/django_crisp_modals/form.html
+++ b/django_crisp_modals/templates/django_crisp_modals/form.html
@@ -1,4 +1,4 @@
-{% extends "crisp_modals/modal.html" %}
+{% extends "django_crisp_modals/modal.html" %}
 
 {% load static %}
 {% load crispy_forms_tags %}
