Rename the module django_crisp_modals to crisp_modals for easier import and update references in templates, forms, and settings. The package name remains django-crisp-modals.

--- a/crisp_modals/templates/crisp_modals/form.html
+++ b/crisp_modals/templates/crisp_modals/form.html
@@ -1,4 +1,4 @@
-{% extends "django_crisp_modals/modal.html" %}
+{% extends "crisp_modals/modal.html" %}
 
 {% load static %}
 {% load crispy_forms_tags %}
