--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -1,11 +1,7 @@
 {% extends "crisp_modals/modal.html" %}
 {% load crisp_modals %}
 
-{% block modal_assets %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"
-            integrity="sha512-YUkaLm+KJ5lQXDBdqBqk7EVhJAdxRnVdT2vtCzwPHSweCzyMgYV/tgGF4/dCyqtCC2eCphz0lRQgatGVdfR0ww=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-{% endblock %}
+{% block modal_assets %}{% endblock %}
 
 {% block modal_title %}<h4 class="my-0">Delete {{ object|verbose_name }}?</h4>{% endblock %}
 {% block pre_content %}
