--- a/crisp_modals/templates/crisp_modals/form.html
+++ b/crisp_modals/templates/crisp_modals/form.html
@@ -3,11 +3,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block modal_assets %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"
-            integrity="sha512-YUkaLm+KJ5lQXDBdqBqk7EVhJAdxRnVdT2vtCzwPHSweCzyMgYV/tgGF4/dCyqtCC2eCphz0lRQgatGVdfR0ww=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-{% endblock %}
+{% block modal_assets %}{% endblock %}
 
 {% block modal_styles %}{% endblock %}
 {% block modal_title %}<h4 class="my-0">{{ form.body.title }}</h4>{% endblock %}
