--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -35,7 +35,9 @@
 </style>
     {% block site_css %}{% endblock %}
     {% block extra_css %}{% endblock %}
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"
+            integrity="sha512-YUkaLm+KJ5lQXDBdqBqk7EVhJAdxRnVdT2vtCzwPHSweCzyMgYV/tgGF4/dCyqtCC2eCphz0lRQgatGVdfR0ww=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     {% block pre_js %}{% endblock %}
 </head>
