Refactor HTML templates to improve structure and styling; update jQuery and related scripts.

--- a/demo/example/templates/example/home.html
+++ b/demo/example/templates/example/home.html
@@ -4,7 +4,7 @@
     Example Application for &mdash; Django Crisp Modals
 {% endblock %}
 
-{% block full %}
+{% block content %}
     <p>Three types of objects can be managed: People, Institutions, and Subjects</p>
     <ul class="list-group list-group-flush">
         <li class="list-group-item"><a href="{% url 'person-list' %}"><i class="bi-people"></i>&emsp;People</a></li>
