--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -9,10 +9,11 @@
 {% endblock %}
 
 {% block modal_body %}
-    <h5>Are you sure you want to delete the following {{ object|verbose_name }} <strong>"{{object}}"</strong>?</h5>
-    <hr/>
-    The following related items will be deleted:
+    <p class="lead">Are you sure you want to delete the {{ object|verbose_name }} <strong>"{{object}}"</strong>?</p>
+    <div class="alert alert-warning text-xs">
+        <p>Related items will be deleted:</p>
     {{ related|html_list }}
+    </div>
     <input type="hidden" name="post" value="yes" />
 {% endblock %}
 {% block modal_footer %}
