--- a/demo/example/templates/example/subject_list.html
+++ b/demo/example/templates/example/subject_list.html
@@ -10,13 +10,14 @@
     </nav>
 {% endblock %}
 {% block page-tools %}
-    <a href="#0" data-modal-url="{% url 'subject-add' %}" class="d-flex flex-column align-items-center py-3">
-        <i class="bi-plus-circle"></i><br/>
+    <a href="#0" data-modal-url="{% url 'subject-add' %}"
+       class="d-flex flex-column align-items-center justify-content-center py-3">
+        <i class="bi-plus-square icon-md mb-2"></i>
         <small class="text-muted">Add Subject</small>
     </a>
 {% endblock %}
 
-{% block full %}
+{% block content %}
     <table class="table table-ruled">
         <thead>
         <tr>
