Enhance delete confirmation modal and form error display; improve related items visibility and styling

--- a/crisp_modals/templates/crisp_modals/form.html
+++ b/crisp_modals/templates/crisp_modals/form.html
@@ -11,7 +11,7 @@
 {% block modal_body %}
     {% if form.errors %}
         <div id="form-errors" class="alert alert-warning">
-            <strong>It looks like there's a problem!</strong>
+            <span class="fs-5 fw-light">It looks like there's a problem!</span>
             <hr class="my-2"/>
             <small>{{ form.errors }}</small>
         </div>
