--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -10,8 +10,9 @@
 
 {% block modal_body %}
     <p class="lead">Are you sure you want to delete the {{ object|verbose_name }} <strong>"{{object}}"</strong>?</p>
-    <div class="alert alert-warning text-xs">
-        <p>Related items will be deleted:</p>
+    <div class="alert alert-warning" style="font-size: 0.9em; max-height: 200px; overflow-y: auto;">
+        <h6>Related items will be deleted:</h6>
+        <hr/>
     {{ related|html_list }}
     </div>
     <input type="hidden" name="post" value="yes" />
