--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -3,7 +3,7 @@
 
 {% block modal_assets %}{% endblock %}
 
-{% block modal_title %}<h4 class="my-0">Delete {{ object|verbose_name }}?</h4>{% endblock %}
+{% block modal_title %}Delete {{ object|verbose_name }}?{% endblock %}
 {% block pre_content %}
     <form action="{% if form_action %}{{ form_action }}{% endif %}" method="post">
 {% endblock %}
