--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -14,7 +14,7 @@
         and the following related items{% endif %}?
     </p>
     {% if related %}
-    <div class="alert alert-warning" style="font-size: 0.9em; max-height: 200px; overflow-y: auto;">
+    <div class="modal-alert bg-warning-subtle text-warning-emphasis" style="font-size: 0.9em; max-height: 200px; overflow-y: auto;">
     {{ related|html_list }}
     </div>
     {% endif %}
