--- a/demo/templates/bs5.html
+++ b/demo/templates/bs5.html
@@ -18,6 +18,7 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" />
 <style>
     :root {
         --bs-font-sans-serif: "Fira Sans";
@@ -74,13 +75,20 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-form@4.3.0/dist/jquery.form.min.js"></script>
 <script src="{% static 'crisp_modals/modals.min.js' %}"></script>
+
+
 {% block extra_js %}{% endblock %}
 <script>
     $(document).ready(function () {
         // enable tooltips
         const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
         const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
-        $('#modal-target').initModal();
+        $('#modal-target').initModal({
+            attrName: 'data-modal-url',
+            setup: function (element) {
+                //$(element).find('.selectmultiple').select2({theme: 'bootstrap-5'});
+            }
+        });
     });
 </script>
 </body>
