Remove Tom Select integration from modal assets block

--- a/crisp_modals/templates/crisp_modals/form.html
+++ b/crisp_modals/templates/crisp_modals/form.html
@@ -3,10 +3,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block modal_assets %}
-<link href="https://cdn.jsdelivr.net/npm/tom-select@2.4.3/dist/css/tom-select.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/tom-select@2.4.3/dist/js/tom-select.complete.min.js"></script>
-{% endblock %}
+{% block modal_assets %}{% endblock %}
 
 {% block modal_styles %}{% endblock %}
 {% block modal_title %}{{ form.body.title }}{% endblock %}
