Refactor form width classes and enhance modal form helpers

--- a/crisp_modals/templates/crisp_modals/modal.html
+++ b/crisp_modals/templates/crisp_modals/modal.html
@@ -36,7 +36,7 @@
 </style>
 <div class="modal fade {% block modal_classes %}{% endblock %}" id="modal" tabindex="-1" role="dialog"
      aria-labelledby="modal-title" inert>
-    <div class="modal-dialog modal-dialog-centered {% block modal_styles %}{% endblock %}">
+    <div class="modal-dialog modal-dialog-centered {% block modal_styles %}modal-lg{% endblock %}">
         <div class="modal-content">
             {% block pre_content %}{% endblock %}
             <div class="modal-header bg-primary-subtle">
