--- a/crisp_modals/templates/crisp_modals/confirm.html
+++ b/crisp_modals/templates/crisp_modals/confirm.html
@@ -5,20 +5,11 @@
 {% block modal_assets %}{% endblock %}
 
 {% block modal_title %}Confirm Action{% endblock %}
-{% block pre_content %}
-    <form action="{% if form_action %}{{ form_action }}{% endif %}" method="post">
-{% endblock %}
+{% block pre_content %}<form action="{{ form.body.form_action }}" method="post">{% endblock %}
 
-{% block modal_body %}
-    {{ confirmation_message }}
-
-{% endblock %}
-{% block modal_footer %}
-    <button type="button" class="btn btn-secondary" value="cancel" data-bs-dismiss="modal" aria-label="Cancel">Cancel</button>
-    <button type="submit" value="Submit" name="confirm" class="btn btn-danger">Yes, I'm sure</button>
-{% endblock %}
+{% block modal_body %}{{ confirmation_message }}{% endblock %}
+{% block modal_footer %}{% crispy form form.footer %}{% endblock %}
 {% block post_content %}
     {% csrf_token %}
-    <input type="hidden" name="post" value="yes" />
     </form>
 {% endblock %}
