Enhance modal functionality with dynamic title and message, and improve setup options

--- a/demo/templates/bs5.html
+++ b/demo/templates/bs5.html
@@ -87,6 +87,7 @@
             attrName: 'data-modal-url',
             setup: function (element) {
                 //$(element).find('.selectmultiple').select2({theme: 'bootstrap-5'});
+                console.log('Modal initialized');
             }
         });
     });
