--- a/crisp_modals/templates/crisp_modals/delete.html
+++ b/crisp_modals/templates/crisp_modals/delete.html
@@ -10,8 +10,8 @@
     </p>
     {% if related %}
         <p>The following related items will also be deleted!</p>
-        <div class="modal-alert bg-warning-subtle text-warning-emphasis"
-             style="font-size: 0.9em; max-height: 200px; overflow-y: auto;">
+        <div class="small p-3 mb-2 bg-warning-subtle text-warning-emphasis"
+             style="max-height: 200px; overflow-y: auto;">
             {{ related|html_list }}
         </div>
     {% endif %}
@@ -20,8 +20,8 @@
             This {{ object|verbose_name }} cannot be deleted because it is
             protected by the following related items:
         </p>
-        <div class="modal-alert bg-danger-subtle text-danger-emphasis"
-             style="font-size: 0.9em; max-height: 200px; overflow-y: auto;">
+        <div class="small p-3 mb-2 bg-danger-subtle text-danger-emphasis"
+             style="max-height: 200px; overflow-y: auto;">
             {{ protected|list_objects }}
         </div>
     {% endif %}
